# ap_scanner

./: .gitignore  Cargo.toml  README.md
ap_scanner/: Cargo.toml
ap_scanner/src/: main.rs
ap_scanner/src/scanning/: daemon.rs  measure.rs  mod.rs  reading.rs  scanner.rs  wifi.rs
ap_scanner_web/: Cargo.toml  rust-toolchain.toml
ap_scanner_web/src/: cache.rs  main.rs
ap_scanner_web/src/readings/: mod.rs  reading.rs  reading_id.rs  wifi.rs
ap_scanner_web/src/routes/: get.rs  post.rs
readings/: oporto.json  oporto_2.json
