[package]
name = "ap_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
clap = { version = "3.1.12", features = ["derive"] }
rayon = "1.5.2"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
