[package]
name = "ap_scanner"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aho-corasick = "0.7"
anyhow = "1.0.57"
clap = { version = "3.1.12", features = ["derive"] }
itertools = "0.10.3"
rand = "0.8.5"
rayon = "1.5.2"
serde = {version = "1.0.136", features = ["derive"]}
serde_json = "1.0.79"
reqwest = { version = "0.11", features = ["blocking", "json"] }